# crypto_trading

./: .dockerignore  .gitignore  CLOUDWATCH_INTEGRATION.md  DEPLOY_AWS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_app_logic.py  trading_COINBASE.json
.github/workflows/: build-test-publish.yml  ci.yml  promote-environment.yml
alembic/: env.py
apps/my-function-app/: type.txt
code/: .placeholder
code/alembic/: env.py
code/config_management/: loader.py  schemas.py
code/crypto_trading/: __init__.py  config.py  plotting.py  run_slack_handler.py  run_task_in_container.py  task.py  task_manager.py  trading.py
code/notification_service/: main.py
code/scripts/: create_placeholder_model.py
code/tests/: plotting_tests.py  slack_interface_tests.py  test_config_management.py  test_model.py  trading_tests.py
code/trading_service/: core.py  main.py  (+2 more)
config/: alembic.ini  algo.json  binance.json  central_config.json  connectSimu.json  pyproject.toml  pytest.ini  testing_binance.json  testing_binance_api.json  trading.json  trading_BINANCE.json  trading_COINBASE.json  trading_SIMU.json
config_management/: schemas.py
crypto_trading/: __init__.py  config.py  main.py  model.py  slack_interface.py  task.py  trading.py
docs/: .placeholder  CICD_PIPELINE_OUTLINE.md  COST_OPTIMIZED_ARCHITECTURE.md  SECURITY_BEST_PRACTICES.md  k3d_guide.md  manual_testing_guide.md
infra/: .placeholder  Dockerfile.app  Dockerfile.notification_service  Dockerfile.trading_service  Dockerfile.trading_task
kubernetes/: configmap.yaml  notification_service_deployment.yaml  trading_service_deployment.yaml
notification_service/: Dockerfile  models.py  slack_client.py
scripts/: config_improvement.py  create_placeholder_model.py  phoenics.json  pytorch_signal_trainer.py
tests/: algo_fixtures.py  connection_fixtures.py  trading_tests.py
trading/: __init__.py  config.py  model.py  trading.py  utils.py
trading_service/: Dockerfile
(+108 files in other folders)
